--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shiva-backend",
   "version": "1.0.0",
-  "description": "A complete backend project for learning porpose ",
+  "description": "A complete backend project for learning purpose ",
   "type": "module",
   "main": "index.js",
   "scripts": {
@@ -16,7 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.3.1"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
