--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
     ],
     "routes": [
         {
-            "src": "/api/v1/(.*)",
-            "dest": "/index.js"
+            "src": "/(.*)",
+            "dest": "/"
         }
     ]
 }
