--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A complete backend project for learning purpose ",
   "type": "module",
   "main": "index.js",
+  "engines": {
+    "node": "18.x "
+  },
   "scripts": {
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
